Next release

  - When parsing "environment=" in the config file, changes introduced in
    3.0a8 prevented Supervisor from parsing some characters commonly
    found in paths unless quoting was used as in this example:
    
      environment=HOME='/home/auser'
    
    Supervisor once again allows the above line to be written as:
    
      environment=HOME=/home/auser

    Alphanumeric characters, "_", "/", ".", "+", "-", "(", ")", and ":" can all 
    be used as a value without quoting. If any other characters are needed in 
    the value, please quote it as in the first example above.  Thanks to Paul 
    Heideman for reporting this issue.

  - Supervisor will now look for its config file in locations relative to the
    executable path, allowing it to be used more easily in virtual 
    environments.  If sys.argv[0] is '/path/to/venv/bin/supervisorctl', 
    supervisor will now look for it's config file in 
    '/path/to/venv/etc/supervisord.conf' and '/path/to/venv/supervisord.conf'
    in addition to the other standard locations.  Patch by Chris Rossi.

3.0a8 (2010-01-20)

  - Don't cleanup file descriptors on first supervisord invocation:
    this is a lame workaround for Snow Leopard systems that use
    libdispatch and are receiving "Illegal instruction" messages at
    supervisord startup time.  Restarting supervisord via
    "supervisorctl restart" may still cause a crash on these systems.

  - Got rid of Medusa hashbang headers in various files to ease RPM
    packaging.

  - Allow umask to be 000 (patch contributed by Rowan Nairn).

  - Fixed a bug introduced in 3.0a7 where supervisorctl wouldn't ask
    for a username/password combination properly from a
    password-protected supervisord if it wasn't filled in within the
    "[supervisorctl]" section username/password values.  It now
    properly asks for a username and password.

  - Fixed a bug introduced in 3.0a7 where setup.py would not detect the